version/0.19/_sources/api/solver/_autosummary/settings/iso_clip.rst.txt
:orphan:

.. _iso_clip:

iso_clip
========

.. autoclass:: ansys.fluent.core.solver.settings_241.iso_clip.iso_clip
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`iso_clip_child <iso_clip_child>`


.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_5>`       'surfaces' child.

============================   =====================

